<resources>
    <string name="app_name">LoginApp</string>
    <string name="login" />
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Send by WhatsApp</string>
    <string name="menu_gallery">Add Contacts</string>
    <string name="menu_sms">Send SMS</string>
    <string name="menu_slideshow">Search Contacts</string>
    <string name="menu_crud">CRUD</string>
    <string name="menu_list">listview</string>
    <string name="menu_rec">Recycle</string>
    <string name="menu_json">Json</string>
    <string name="menu_share">Send by Gmail</string>
    <string name="menu_send">Acess Contacts</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="user_passwd" />
    <string name="login_button" />
    <string name="register" />
    <string name="user_name" />
    <string name="dialog_title">Data</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
</resources>